--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <meta property="og:image" content="https://color-rush-game.vercel.app/api/image" />
     <meta property="og:url" content="https://color-rush-game.vercel.app/" />
     
-    <!-- Farcaster Frame Meta Tags -->
+    <!-- Farcaster Mini App Embed -->
+    <meta name="fc:miniapp" content='{"type":"miniapp","name":"Color Rush","description":"Test your color matching skills! 30-second challenge with scoring and streaks.","image":"https://color-rush-game.vercel.app/api/image","url":"https://color-rush-game.vercel.app/","button_title":"🎯 Play Color Rush"}' />
+    
+    <!-- Farcaster Frame Meta Tags (for backward compatibility) -->
+    <meta name="fc:frame" content='{"type":"miniapp","name":"Color Rush","description":"Test your color matching skills! 30-second challenge with scoring and streaks.","image":"https://color-rush-game.vercel.app/api/image","url":"https://color-rush-game.vercel.app/","button_title":"🎯 Play Color Rush"}' />
     <meta property="fc:frame" content="vNext" />
     <meta property="fc:frame:image" content="https://color-rush-game.vercel.app/api/image" />
     <meta property="fc:frame:image:aspect_ratio" content="1.91:1" />
